# esp-idf

components/esp_system/ld/esp32s3/: sections.ld.in
components/gprof/: io.c  mcount.c
components/lvgl__lvgl/: CMakeLists.txt
components/lvgl__lvgl/env_support/cmake/: esp.cmake
examples/get-started/hello_world/: at_customize.csv  partitions_at.csv  sdkconfig.defaults
examples/get-started/hello_world/main/: hello_world_main.c
examples/peripherals/lcd/rgb_music/: CMakeLists.txt  gmon.out  log.txt  sdkconfig.defaults
examples/peripherals/lcd/rgb_music/main/: CMakeLists.txt  rgb_lcd_example_main.c
examples/peripherals/lcd/rgb_music/main/music/: lv_demo_music_list.c
examples/peripherals/lcd/rgb_panel/: gmon.out  log.txt
examples/peripherals/lcd/rgb_panel/main/: CMakeLists.txt  rgb_lcd_example_main.c
